Checked if video ended

--- a/MauiSeekBar/Resources/Raw/video-player.html
+++ b/MauiSeekBar/Resources/Raw/video-player.html
@@ -38,6 +38,10 @@
             }
         };
 
+        const getEnded = () => {
+            return videoPlayer.ended;
+        };
+
         const play = () => {
             videoPlayer.play();
         };
