--- a/MauiSeekBar/Resources/Raw/video-player.html
+++ b/MauiSeekBar/Resources/Raw/video-player.html
@@ -17,6 +17,7 @@
         #videoPlayer {
             width: 100%;
             height: 100%;
+            background-color: black;
         }
     </style>
 </head>
