Current time and is position text visible

--- a/MauiSeekBar/Resources/Raw/video-player.html
+++ b/MauiSeekBar/Resources/Raw/video-player.html
@@ -46,6 +46,10 @@
         const pause = () => {
             videoPlayer.pause();
         };
+
+        const setCurrentTime = (currentTime) => {
+            videoPlayer.currentTime = currentTime;
+        };
     </script>
 </body>
 </html>
