Pause video on seek, minor updates

--- a/MauiSeekBar/Resources/Raw/video-player.html
+++ b/MauiSeekBar/Resources/Raw/video-player.html
@@ -28,6 +28,7 @@
         const loadVideo = (videoFileUri) => {
             addEventListener('contextmenu', (e) => e.preventDefault());
             videoPlayer.src = videoFileUri;
+            videoPlayer.volume = 1;
         };
 
         const getDuration = () => {
